---------------------------------------------------------------------------

2008-10-xx  Darren Duncan <perl@DarrenDuncan.net>

    * Muldis::D version 0.50.0 is released on CPAN as
    Muldis-D-0.50.0.tar.gz.

    * New file versions are: D.pm 0.50.0 and PTMD_Tiny.pod 0.31.0 and
    HDMD_Perl_Tiny.pod 0.28.0.  The other pre-existing versioned files are
    unchanged.

    * (HDMD_Perl_Tiny.pod)  Simplified all value literals having an
    'any_perl' format hint option, namely
    Bool|Int|Rat|(UTC|Float)Instant|Duration, by removing said option.  So
    now the most liberal Perl-specific format options are gone; however,
    the more strict Perl-specific formats (that disallow whitespace for
    example) that remain now allow a few more options than before.  A
    perl-bool in Perl 5 may now use either the number zero or the empty
    string to mean false, not just the empty string.

    * (HDMD_Perl_Tiny.pod)  Simplified all value literals having a format
    hint portion, namely
    Bool|Int|Blob|Order|Rat|(UTC|Float)Instant|Duration, by removing said
    format hint portion.  With the numeric, blob, and temporal value
    literals, the test for how to interpret the payload is based simply on
    the number of node elements, which is 3 for md and 2 for perl, and the
    old 3rd/4th format element was redundant now that any-perl no longer
    exists.  With bool and order types, that are both very short enums, we
    can unambiguously determine what bool/order value was wanted by
    examining the Perl data type and Perl values of the payload.  Overall,
    this change should eliminate another kind of tedious verbosity that was
    common to Perl-Tiny code.

    * (PTMD_Tiny.pod, HDMD_Perl_Tiny.pod)  In a reversal of one aspect of
    release 0.20.0, updated most nonscalar value literal syntax to re-add
    the then-removed explicit meta-data of what specific data type the
    nonscalar value is a member of, rather than it for example being a