@@ -37,6 +37,26 @@ In other words, support what is common with the likes of Postgres and MySQL
 where one can just set the "current database|schema" and then subsequent
 entity references by statements don't have to be qualified with said.
 
+* Update the Tiny dialects with special syntax for declaring whole depots
+in a single expression, catalog+data.  This can be useful for example with
+a simple Muldis D implementation that wants to represent a persisted depot
+on disk as a single file that is Muldis D source code.  This would mostly
+be like a bootloader definition except that details related to the name
+that a depot is mounted with aren't given as they would with an
+application-side bootloader.
+
+* Update the Tiny dialects with special syntax for some nonscalar catalog
+types, particularly definitions of routines and types, so that both doing
+this can be made even more like a normal language, and also the missing
+pieces to support more appropriate syntax coloring and routine locating in
+text editors looking at Muldis D source, eg a 'function' keyword at the
+start of each function.  Here are some keywords that can then be added:
+function, updater, procedure, type, param, ro_param, upd_param, expr, stmt,
+subtype, key, possrep, etc; they apply to both 'outer' and 'inner'
+types/routines; also keywords for declaring whole packages or something.
+Also consider that some pragmas can go away, their actions made always-on
+or 'lexical'.
+
 * Add catalog types that represent thrown exceptions.
 
 * Also study SQL concept of conditions and handlers, looks sort of like
