@@ -129,12 +129,19 @@ the original author and by other parties.
 
 At the highest level, a fully-qualified Muldis D language name is a
 (ordered) sequence of values having a minimum of 2 elements, and typically
-about 5 elements.  The elements are read one at a time, starting with the
+about 4-6 elements.  The elements are read one at a time, starting with the
 first; the value of each element, combined with those before it, determine
 what number and kind of elements are valid to follow it in the sequence.
 So all Muldis D variants are organized into a single hierarchy where each
 child node represents a language derived from or extending the language
 represented by its parent node.
+
+In documentation, it is typical to use a Muldis D language name involving
+just a sub-sequence of the allowed elements that is missing child-most
+allowed elements; in that case, this language name implicitly refers to the
+entire language sub-tree having the specified elements in common; an
+example of this is the 3-element name mentioned in this file's DESCRIPTION
+section.  Even in code, sometimes certain child-most elements are optional.
 
 =head2 Foundation
 
@@ -258,16 +265,9 @@ L<Muldis::D::Dialect::HDMD_Perl_Tiny>.
 
 =head2 Extensions
 
-The fifth element of the Muldis D language name is an unordered collection
-of name+value pairs (the names are unique keys in the collection) and are
-for specifying any other information that should be known.  Some possible
-name+value pairs are dialect-specific pragmas or compiler directives, that
-change the behaviour of just how the dialect is parsed and are otherwise
-agnostic to implementation and have no further affect on code after it has
-been parsed.  Other possible name+value pairs will enumerate what various
-non-standard but implementation-provided built-in features the current
-Muldis D code makes use of; non-standard in this case meaning not part of
-the already named language authority+version+dialect.
+Whether or not the Muldis D language name has a fifth or further elements
+depends on the dialect.  See the documentation for each individual dialect
+to see what it supports or requires.
 
 =head1 SEE ALSO
 
