@@ -10,6 +10,13 @@
     HDMD_Perl_Tiny.pod 0.28.0.  The other pre-existing versioned files are
     unchanged.
 
+    * (D.pm)  In the VERSIONING section, clarified that a Muldis D language
+    name can have some elements optional in documentation, in which case
+    the partial name refers to the whole subtree of language variants
+    having the specified elements in common.  Also simplified the
+    Extensions sub-section to say that whether a 5th or subsequent elements
+    exists and their format varies by the dialect in use.
+
     * (HDMD_Perl_Tiny.pod)  Simplified all value literals having an
     'any_perl' format hint option, namely
     Bool|Int|Rat|(UTC|Float)Instant|Duration, by removing said option.  So
